fixed file(TO_CMAKE_PATH errs with quotes in case of empty vars (COINDIR etc), added _TA target to NOT WIN32 maketa section for compliance with depends tried once more with all manner of depends and targets to do away with dummy, but couldn't -- you probably just need to suck it up and add that back to windows.  also, _TA target depend should be .cpp because that is what is used as dependency for dummy lib so that would at least keep it consistent -- did this in non-win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,9 @@ endif(COMMAND cmake_policy)
 # Step 1a: some standard env variables, loaded locally
 #   and fixed up for Windows
 
-file(TO_CMAKE_PATH $ENV{COINDIR} COINDIR)
+file(TO_CMAKE_PATH "$ENV{COINDIR}" COINDIR)
 # note: EMERGENTDIR is really only used on Windows
-file(TO_CMAKE_PATH $ENV{EMERGENTDIR} EMERGENTDIR)
+file(TO_CMAKE_PATH "$ENV{EMERGENTDIR}" EMERGENTDIR)
 
 ################################################################
 # Step 2: set all the basic parameters about the project
@@ -196,7 +196,7 @@ add_dependencies(emergentlib temt)
 add_dependencies(emergent emergentlib)
 # dummy guys all here, in case we nuke them...
 if (NOT WIN32)
-add_dependencies(ta_dummy maketa)
+#add_dependencies(ta_dummy maketa)
 add_dependencies(temt ta_dummy)
 add_dependencies(network_dummy temt )
 add_dependencies(bp_dummy network_dummy )
