win build updates

--- a/src/emergent/network/CMakeLists.txt
+++ b/src/emergent/network/CMakeLists.txt
@@ -8,6 +8,7 @@ set(mypath ${PROJECT_SOURCE_DIR}/src/emergent/network)
 CREATE_MAKETA_COMMAND(network ${mypath} "${network_HEADS_MAKETA}")
 
 
+if (false)
 # setup dependency between dummy.cpp file included in dummy library and TA file we 
 # actually want to generate now
 SET_SOURCE_FILES_PROPERTIES(dummy.cpp
@@ -16,7 +17,7 @@ SET_SOURCE_FILES_PROPERTIES(dummy.cpp
 
 # need a target to get anything to happen in this directory, so this is it
 add_library(network_dummy STATIC dummy.cpp)
-
+endif (false)
 
 ########### install files ###############
 
