--- a/src/emergent/bp/CMakeLists.txt
+++ b/src/emergent/bp/CMakeLists.txt
@@ -7,7 +7,7 @@ set(mypath ${PROJECT_SOURCE_DIR}/src/emergent/bp)
 
 CREATE_MAKETA_COMMAND(bp ${mypath} "${bp_HEADS_MAKETA}")
 
-
+if (false)
 # setup dependency between dummy.cpp file included in dummy library and TA file we 
 # actually want to generate now
 SET_SOURCE_FILES_PROPERTIES(dummy.cpp
@@ -16,7 +16,7 @@ SET_SOURCE_FILES_PROPERTIES(dummy.cpp
 
 # need a target to get anything to happen in this directory, so this is it
 add_library(bp_dummy STATIC dummy.cpp)
-
+endif (false)
 ########### install files ###############
 
 install(FILES ${bp_HEADS} DESTINATION ${EMERGENT_INCLUDE_DEST})
