--- a/src/temt/ta/CMakeLists.txt
+++ b/src/temt/ta/CMakeLists.txt
@@ -7,6 +7,7 @@ set(mypath ${PROJECT_SOURCE_DIR}/src/temt/ta)
 
 CREATE_MAKETA_COMMAND(ta ${mypath} "${ta_HEADS_MAKETA}")
 
+if (false)
 # setup dependency between dummy.cpp file included in dummy library and TA file we 
 # actually want to generate now
 SET_SOURCE_FILES_PROPERTIES(dummy.cpp
@@ -15,7 +16,7 @@ SET_SOURCE_FILES_PROPERTIES(dummy.cpp
 
 # need a target to get anything to happen in this directory, so this is it
 add_library(ta_dummy STATIC dummy.cpp)
-
+endif (false)
 ########### install files ###############
 
 install(FILES ${ta_HEADS} DESTINATION ${EMERGENT_INCLUDE_DEST})
